# data-processing

./: main.py  pyproject.toml  requirements.txt
data/: reviews.csv  reviews_cleaned.csv
report/: report.md
src/: classifier.py  features.py  preprocessor.py  scraper.py
ui/: streamlit_app.py
