[project]
name = "data-processing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "matplotlib>=3.10.8",
    "nltk>=3.9.4",
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pypdf2>=3.0.1",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "selenium>=4.43.0",
    "streamlit>=1.56.0",
    "wordcloud>=1.9.6",
]
